--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
   <a href="#" class="cta">View Gallery</a>
 
   <footer>
-    © 2025 Mira Sage • One-page mockup built by <a href="https://lcacosta.com" target="_blank">LC Acosta</a>
+    © 2025 Mira Sage • contact@mirasage.fake
   </footer>
 
 </body>
