--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
     .copyright,
     .built-by {
-      font-size: 0.85rem;
+      font-size: 0.70rem;
       margin-top: 0.5rem;
       color: #aaa;
     }
@@ -400,6 +400,7 @@
 
   <footer>
     <div class="copyright">© 2025 Wellness by Taylor. All rights reserved. | contact@wellnessbytaylor.fake</div>
+    <div class="built-by">Made with <span class="sparkle-heart">♥</span> by <a href="https://lcacosta.com">LC</a></div>
     
   </footer>
 
@@ -540,6 +541,7 @@
 
   <footer>
     © 2025 Mira Sage • contact@mirasage.fake
+    <div class="built-by">Made with <span class="sparkle-heart">♥</span> by <a href="https://lcacosta.com">LC</a></div>
   </footer>
 
 </body>
