--- a/index.html
+++ b/index.html
@@ -289,7 +289,12 @@
       font-weight: 600;
     }
 
-    .copyright,
+    .copyright {
+    font-size: 0.85rem;
+    margin-top: 0.5rem;
+    color: #aaa;
+    }
+    
     .built-by {
       font-size: 0.70rem;
       margin-top: 0.5rem;
@@ -540,7 +545,7 @@
   <a href="#" class="cta">View Gallery</a>
 
   <footer>
-    © 2025 Mira Sage • contact@mirasage.fake
+   <div class="copyright"> © 2025 Mira Sage • contact@mirasage.fake</div>
     <div class="built-by">Made with <span class="sparkle-heart">♥</span> by <a href="https://lcacosta.com">LC</a></div>
   </footer>
 
