--- a/index.html
+++ b/index.html
@@ -513,6 +513,12 @@
       font-size: 0.85rem;
       color: #aaa;
     }
+
+      .built-by {
+      font-size: 0.70rem;
+      margin-top: 0.5rem;
+      color: #aaa;
+    }
   </style>
 </head>
 <body>
@@ -630,6 +636,11 @@
       font-size: 0.85rem;
       background: #f7f7f7;
       color: #777;
+    }
+      .built-by {
+      font-size: 0.70rem;
+      margin-top: 0.5rem;
+      color: #aaa;
     }
   </style>
 </head>
