--- a/index.html
+++ b/index.html
@@ -519,6 +519,10 @@
       margin-top: 0.5rem;
       color: #aaa;
     }
+        .portrait-img {
+        width: 100px;
+        height: 100px;
+      }
   </style>
 </head>
 <body>
