--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
   <div class="hero">
     <h2>Welcome to My Portfolio</h2>
     <p>I create from instinct, emotion, and a desire to disrupt the ordinary. If you feel drawn to bold shapes and soft edges, you’re in the right place.</p>
-    <img src="https://via.placeholder.com/640x360?text=Hero+Art+Banner" alt="Hero Artwork">
+    <img src="https://images.pexels.com/photos/2983141/pexels-photo-2983141.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Hero Artwork">
   </div>
 
   <div class="features">
