--- a/index.html
+++ b/index.html
@@ -519,10 +519,15 @@
       margin-top: 0.5rem;
       color: #aaa;
     }
-        .portrait-img {
-        width: 100px;
-        height: 100px;
-      }
+          .portrait-img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin: 1rem auto 1.5rem;
+      display: block;
+      border: 2px solid #ddd;
+    }
   </style>
 </head>
 <body>
