--- a/index.html
+++ b/index.html
@@ -590,10 +590,10 @@
 
   <h2 class="gallery-heading">🎨 Gallery Highlights</h2>
   <div class="gallery">
-    <img src="https://images.pexels.com/photos/3889846/pexels-photo-3889846.jpeg" alt="Artwork 1">
-    <img src="https://images.pexels.com/photos/3769537/pexels-photo-3769537.jpeg" alt="Artwork 2">
-    <img src="https://images.pexels.com/photos/4588015/pexels-photo-4588015.jpeg" alt="Artwork 3">
-    <img src="https://images.pexels.com/photos/1697417/pexels-photo-1697417.jpeg" alt="Artwork 4">
+    <img src="https://images.pexels.com/photos/3582425/pexels-photo-3582425.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Artwork 1">
+    <img src="https://images.pexels.com/photos/3705942/pexels-photo-3705942.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Artwork 2">
+    <img src="https://images.pexels.com/photos/1183992/pexels-photo-1183992.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Artwork 3">
+    <img src="https://images.pexels.com/photos/3002463/pexels-photo-3002463.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Artwork 4">
   </div>
 
   <div class="testimonial">
