--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
       text-align: center;
     }
 
+    a{
+      color: #6ABFC4;
+      text-decoration: none !important;
+      font-weight: 600;
+    }
+
+    a:hover{
+      color: #E4A3B1;
+      text-decoration: none !important;
+    }
+
     h1 {
       font-size: 2rem;
       margin-bottom: 1rem;
