--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
 </head>
 <body>
 
-  <img src="https://media.istockphoto.com/id/1364209752/photo/self-employed-painter-looking-at-the-camera-cheerfully.jpg?s=2048x2048&w=is&k=20&c=iwY59_wttToaL6EZldsqU-78f0aIMIZcTCsR3auGJ5U=" alt="Your Portrait" class="portrait-img">
+  <img src="https://images.pexels.com/photos/6925444/pexels-photo-6925444.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Your Portrait" class="portrait-img">
   <h1>Mira Sage</h1>
   <p class="subtitle">Mixed media artist exploring light, shadow, and story ✨</p>
 
