--- a/index.html
+++ b/index.html
@@ -713,6 +713,12 @@
       margin-top: 0.5rem;
       color: #aaa;
     }
+
+    li {
+  list-style: none;
+  padding-left: 0;
+}
+
   </style>
 </head>
 <body>
