--- a/index.html
+++ b/index.html
@@ -390,6 +390,10 @@
         <img src="https://images.pexels.com/photos/4049992/pexels-photo-4049992.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Service Three" />
         <p>1:1 Coaching Calls</p>
       </div>
+        <div class="card">
+              <img src="https://images.pexels.com/photos/10556506/pexels-photo-10556506.jpeg" alt="Retreats" />
+              <p>Mini Wellness Retreats</p>
+            </div>
     </div>
   </section>
 
