--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   </div>
 
  <footer>
-     <p>🚀 You could have a site like this in 3 days · <a href="/pwyc">Learn more</a></p>
+     <p>🚀 You could have a site like this in 3 days · <a href="https://lcacosta.com/pwyc">Learn more</a></p>
      <div class="built-by">Built with <span class="sparkle-heart">♥</span> by <a href="https://lcacosta.com">LC Acosta</a></div>
   </footer>
 
@@ -768,6 +768,16 @@
     </div>
   </div>
 </section>
+
+<div class="contact">
+    <h2>Get in Touch</h2>
+    <form action="#" method="post">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <textarea name="message" rows="4" placeholder="Your Message"></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </div>
 
 <footer>
   &copy; 2025 Clarity Services Co. All rights reserved. | contact@clarityco.fake
